--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -187,3 +187,35 @@
     transform: rotate(360deg);
   }
 }
+
+.load-more {
+  display: block;
+  margin: 32px auto 16px auto;
+
+  padding: 10px 20px;
+
+  border: none;
+  border-radius: 8px;
+
+  background-color: #4e75ff;
+  color: white;
+
+  font-size: 16px;
+  font-family: Montserrat;
+
+  cursor: pointer;
+}
+
+.load-more:hover {
+  background-color: #6c8cff;
+}
+
+.loader-text {
+  text-align: center;
+  font-size: 18px;
+  margin-bottom: 40px;
+}
+
+.is-hidden {
+  display: none;
+}
